--- a/services/caddy/Caddyfile
+++ b/services/caddy/Caddyfile
@@ -9,6 +9,16 @@ http://matrix.local.wg {
     reverse_proxy localhost:8008
 }
 
+http://local.dns {
+    rewrite * /admin{uri}
+    reverse_proxy localhost:10001
+}
+
+http://roaming.dns {
+    rewrite * /admin{uri}
+    reverse_proxy localhost:10002
+}
+
 http://*.local {
     file_server browse {
         root /wireguard
