--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
 version: '2'
 volumes:
-    postgres:
-    uploads:
-    static:
-    config:
-    matrix:
-    element:
-    dnsconfig:
-    sqldata:
-    netclient:
-    wireguard:
-    wirehub:
-    pihole1_config:
-    dnsmasq1_config:
-    pihole2_config:
-    dnsmasq2_config:
-    nextcloud:
-    redis:
-    wg:
+  postgres:
+  uploads:
+  static:
+  config:
+  matrix:
+  element:
+  dnsconfig:
+  sqldata:
+  netclient:
+  wireguard:
+  wirehub:
+  pihole1_config:
+  dnsmasq1_config:
+  pihole2_config:
+  dnsmasq2_config:
+  nextcloud:
+  redis:
+  wg:
+  assets:
+  peertube_config:
+  peertube_data:
+  certs:
+  extra_certs:
 services:
 
   wireguard:
     build: ./services/wireguard
     privileged: true
     network_mode: host
-    ports: 
+    ports:
       - "7980:7980"
     labels:
       io.balena.features.kernel-modules: 1
@@ -49,6 +54,7 @@ services:
       - LIGHTTPD_PORT=10001
     labels:
       io.balena.features.dbus: "1"
+
   pihole2:
     container_name: pihole
     build: ./services/pihole
@@ -68,29 +74,34 @@ services:
     labels:
       io.balena.features.dbus: "1"
 
-  matrix-generate:
-    image: matrixdotorg/synapse:v1.49.2
-    restart: "on-failure"
-    command: generate
-    environment:
-      - SYNAPSE_SERVER_NAME=matrix.local.wg
-      - SYNAPSE_REPORT_STATS=no
-    volumes:
-      - matrix:/data
-  
-  matrix-setup:
-    build: ./services/matrix
-    volumes:
-      - matrix:/data
-
-  matrix:
-    image: matrixdotorg/synapse:v1.49.2
-    restart: always
+  wesher:
+    build: ./services/wesher
     network_mode: host
-    volumes:
-      - matrix:/data
-    depends_on:
-      - matrix-setup
+    privileged: true
+
+  # matrix-generate:
+  #   image: matrixdotorg/synapse:v1.49.2
+  #   restart: "on-failure"
+  #   command: generate
+  #   environment:
+  #     - SYNAPSE_SERVER_NAME=matrix.local.wg
+  #     - SYNAPSE_REPORT_STATS=no
+  #   volumes:
+  #     - matrix:/data
+
+  # matrix-setup:
+  #   build: ./services/matrix
+  #   volumes:
+  #     - matrix:/data
+
+  # matrix:
+  #   image: matrixdotorg/synapse:v1.49.2
+  #   restart: always
+  #   network_mode: host
+  #   volumes:
+  #     - matrix:/data
+  #   depends_on:
+  #     - matrix-setup
 
   caddy:
     build: ./services/caddy
@@ -99,9 +110,119 @@ services:
     volumes:
       - element:/element
       - wireguard:/wireguard
+      - certs:/usr/local/share/ca-certificates
+      - certs:/wireguard/certs
+      - extra_certs:/usr/local/share/ca-certificates/extra
 
-  element:
-    build: ./services/element
-    restart: "on-failure"
-    volumes: 
-      - element:/app
+  # element:
+  #   build: ./services/element
+  #   restart: "on-failure"
+  #   volumes: 
+  #     - element:/app
+
+
+  # # You can comment this webserver section if you want to use another webserver/proxy
+  # webserver:
+  #   image: chocobozzz/peertube-webserver:latest
+  #   # If you don't want to use the official image and build one from sources:
+  #   # build:
+  #   #   context: .
+  #   #   dockerfile: Dockerfile.nginx
+  #   env_file:
+  #     - .env
+  #   ports:
+  #    - "80:80"
+  #    - "443:443"
+  #   volumes:
+  #     - type: bind
+  #       # Switch sources if you downloaded the whole repository
+  #       #source: ../../nginx/peertube
+  #       source: ./docker-volume/nginx/peertube
+  #       target: /etc/nginx/conf.d/peertube.template
+  #     - assets:/var/www/peertube/peertube-latest/client/dist:ro
+  #     - ./docker-volume/data:/var/www/peertube/storage
+  #     - certbot-www:/var/www/certbot
+  #     - ./docker-volume/certbot/conf:/etc/letsencrypt
+  #   depends_on:
+  #     - peertube
+  #   restart: "always"
+
+  # # You can comment this certbot section if you want to use another webserver/proxy
+  # certbot:
+  #   container_name: certbot
+  #   image: certbot/certbot
+  #   volumes:
+  #     - ./docker-volume/certbot/conf:/etc/letsencrypt
+  #     - certbot-www:/var/www/certbot
+  #   restart: unless-stopped
+  #   entrypoint: /bin/sh -c "trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot; sleep 12h & wait $${!}; done;"
+  #   depends_on:
+  #     - webserver
+
+  peertube:
+    # If you don't want to use the official image and build one from sources:
+    # build:
+    #   context: .
+    #   dockerfile: ./support/docker/production/Dockerfile.bullseye
+    image: chocobozzz/peertube:production-bullseye
+    environment:
+      - PEERTUBE_DB_USERNAME=peertube
+      - PEERTUBE_DB_PASSWORD=peertube
+      - PEERTUBE_DB_SSL=false
+      - PEERTUBE_DB_HOSTNAME=postgres
+      - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
+      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
+      - PEERTUBE_ADMIN_EMAIL=test@example.com
+      - PT_INITIAL_ROOT_PASSWORD=testpassword
+    ports:
+      - "1935:1935" # If you don't want to use the live feature, you can comment this line
+      - "9000:9000" # If you provide your own webserver and reverse-proxy, otherwise not suitable for production
+    volumes:
+      - assets:/app/client/dist
+      - peertube_data:/data
+      - peertube_config:/config
+      - certs:/usr/local/share/ca-certificates
+      - extra_certs:/usr/local/share/ca-certificates/extra
+    depends_on:
+      - postgres
+      - redis
+      # - postfix
+    restart: "always"
+  postgres:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_USER=peertube
+      - POSTGRES_PASSWORD=peertube
+      - POSTGRES_DB=peertube
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    restart: "always"
+  redis:
+    image: redis:6-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=peertube
+      - PEERTUBE_DB_USERNAME=peertube
+      - PEERTUBE_DB_PASSWORD=peertube
+      - PEERTUBE_DB_SSL=false
+      - PEERTUBE_DB_HOSTNAME=localhost
+      - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
+      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
+    volumes:
+      - redis:/data
+    restart: "always"
+
+# # networks:
+# #   default:
+# #     ipam:
+# #       driver: default
+# #       config:
+# #       - subnet: 172.18.0.0/16
+#   # postfix:
+#   #   image: mwader/postfix-relay
+#   #   env_file:
+#   #     - ./services/peertube/.env
+#   #   volumes:
+#   #     - ./docker-volume/opendkim/keys:/etc/opendkim/keys
+#   #   restart: "always"
