auto exchence CA root on wesher

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     build: ./services/wireguard
     privileged: true
     network_mode: host
+    restart: "on-failure"
     ports:
       - "7980:7980"
     labels:
@@ -93,37 +94,36 @@ services:
       - certs:/wireguard/certs
       - extra_certs:/usr/local/share/ca-certificates/extra
       - caddydata:/data
+  # matrix-generate:
+  #   image: matrixdotorg/synapse:v1.49.2
+  #   restart: "on-failure"
+  #   command: generate
+  #   environment:
+  #     - SYNAPSE_SERVER_NAME=matrix.local.wg
+  #     - SYNAPSE_REPORT_STATS=no
+  #   volumes:
+  #     - matrix:/data
 
-  matrix-generate:
-    image: matrixdotorg/synapse:v1.49.2
-    restart: "on-failure"
-    command: generate
-    environment:
-      - SYNAPSE_SERVER_NAME=matrix.local.wg
-      - SYNAPSE_REPORT_STATS=no
-    volumes:
-      - matrix:/data
+  # matrix-setup:
+  #   build: ./services/matrix
+  #   volumes:
+  #     - matrix:/data
 
-  matrix-setup:
-    build: ./services/matrix
-    volumes:
-      - matrix:/data
+  # matrix:
+  #   image: matrixdotorg/synapse:v1.49.2
+  #   restart: always
+  #   network_mode: host
+  #   volumes:
+  #     - matrix:/data
+  #     - etc:/etc
+  #   depends_on:
+  #     - matrix-setup
 
-  matrix:
-    image: matrixdotorg/synapse:v1.49.2
-    restart: always
-    network_mode: host
-    volumes:
-      - matrix:/data
-    depends_on:
-      - matrix-setup
-
-  element:
-    build: ./services/element
-    restart: "on-failure"
-    volumes:
-      - element:/app
-
+  # element:
+  #   build: ./services/element
+  #   restart: "on-failure"
+  #   volumes:
+  #     - element:/app
   # # You can comment this webserver section if you want to use another webserver/proxy
   # webserver:
   #   image: chocobozzz/peertube-webserver:latest
@@ -162,70 +162,71 @@ services:
   #   depends_on:
   #     - webserver
 
-  peertube:
-    # If you don't want to use the official image and build one from sources:
-    # build:
-    #   context: .
-    #   dockerfile: ./support/docker/production/Dockerfile.bullseye
-    image: chocobozzz/peertube:production-bullseye
-    environment:
-      - PEERTUBE_DB_USERNAME=peertube
-      - PEERTUBE_DB_PASSWORD=peertube
-      - PEERTUBE_DB_SSL=false
-      - PEERTUBE_DB_HOSTNAME=postgres
-      - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
-      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
-      - PEERTUBE_ADMIN_EMAIL=test@example.com
-      - PT_INITIAL_ROOT_PASSWORD=testpassword
-    ports:
-      - "1935:1935" # If you don't want to use the live feature, you can comment this line
-      - "9000:9000" # If you provide your own webserver and reverse-proxy, otherwise not suitable for production
-    volumes:
-      - assets:/app/client/dist
-      - peertube_data:/data
-      - peertube_config:/config
-      - certs:/usr/local/share/ca-certificates
-      - extra_certs:/usr/local/share/ca-certificates/extra
-    depends_on:
-      - postgres
-      - redis
-      # - postfix
-    restart: "always"
-  postgres:
-    image: postgres:13-alpine
-    environment:
-      - POSTGRES_USER=peertube
-      - POSTGRES_PASSWORD=peertube
-      - POSTGRES_DB=peertube
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    restart: "always"
-  redis:
-    image: redis:6-alpine
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=peertube
-      - PEERTUBE_DB_USERNAME=peertube
-      - PEERTUBE_DB_PASSWORD=peertube
-      - PEERTUBE_DB_SSL=false
-      - PEERTUBE_DB_HOSTNAME=localhost
-      - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
-      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
-    volumes:
-      - redis:/data
-    restart: "always"
+  # peertube:
+  #   # If you don't want to use the official image and build one from sources:
+  #   # build:
+  #   #   context: .
+  #   #   dockerfile: ./support/docker/production/Dockerfile.bullseye
+  #   image: chocobozzz/peertube:production-bullseye
+  #   environment:
+  #     - PEERTUBE_DB_USERNAME=peertube
+  #     - PEERTUBE_DB_PASSWORD=peertube
+  #     - PEERTUBE_DB_SSL=false
+  #     - PEERTUBE_DB_HOSTNAME=postgres
+  #     - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
+  #     - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
+  #     - PEERTUBE_ADMIN_EMAIL=test@example.com
+  #     - PT_INITIAL_ROOT_PASSWORD=testpassword
+  #   ports:
+  #     - "1935:1935" # If you don't want to use the live feature, you can comment this line
+  #     - "9000:9000" # If you provide your own webserver and reverse-proxy, otherwise not suitable for production
+  #   volumes:
+  #     - assets:/app/client/dist
+  #     - peertube_data:/data
+  #     - peertube_config:/config
+  #     - certs:/usr/local/share/ca-certificates
+  #     - extra_certs:/usr/local/share/ca-certificates/extra
+  #     - etc:/etc
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #     # - postfix
+  #   restart: "always"
+  # postgres:
+  #   image: postgres:13-alpine
+  #   environment:
+  #     - POSTGRES_USER=peertube
+  #     - POSTGRES_PASSWORD=peertube
+  #     - POSTGRES_DB=peertube
+  #   volumes:
+  #     - postgres:/var/lib/postgresql/data
+  #   restart: "always"
+  # redis:
+  #   image: redis:6-alpine
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - POSTGRES_DB=peertube
+  #     - PEERTUBE_DB_USERNAME=peertube
+  #     - PEERTUBE_DB_PASSWORD=peertube
+  #     - PEERTUBE_DB_SSL=false
+  #     - PEERTUBE_DB_HOSTNAME=localhost
+  #     - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
+  #     - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
+  #   volumes:
+  #     - redis:/data
+  #   restart: "always"
 
-# # networks:
-# #   default:
-# #     ipam:
-# #       driver: default
-# #       config:
-# #       - subnet: 172.18.0.0/16
-#   # postfix:
-#   #   image: mwader/postfix-relay
-#   #   env_file:
-#   #     - ./services/peertube/.env
-#   #   volumes:
-#   #     - ./docker-volume/opendkim/keys:/etc/opendkim/keys
-#   #   restart: "always"
+  # # networks:
+  # #   default:
+  # #     ipam:
+  # #       driver: default
+  # #       config:
+  # #       - subnet: 172.18.0.0/16
+  #   # postfix:
+  #   #   image: mwader/postfix-relay
+  #   #   env_file:
+  #   #     - ./services/peertube/.env
+  #   #   volumes:
+  #   #     - ./docker-volume/opendkim/keys:/etc/opendkim/keys
+  #   #   restart: "always"
