Make wesher utility scripts executable
(cherry picked from commit 35f8951953c5271787595eccdee8b23d70f3617a)

--- a/services/wesher/Dockerfile
+++ b/services/wesher/Dockerfile
@@ -7,4 +7,5 @@ RUN chmod a+x wesher
 COPY run.sh run.sh
 COPY hosts_updated.sh .
 COPY watch_hosts.sh .
+RUN chmod a+x wesher run.sh hosts_updated.sh watch_hosts.sh
 CMD [ "/run.sh" ]
