--- a/services/matrix/Dockerfile
+++ b/services/matrix/Dockerfile
@@ -1,5 +1,6 @@
-FROM balenalib/aarch64-debian
+FROM balenalib/amd64-debian
 
+RUN install_packages miniupnpc
 COPY config.sh config.sh
 
 CMD ["./config.sh"]
