--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,21 +27,18 @@ volumes:
   etc:
   caddydata:
 services:
-
   wireguard:
     build: ./services/wireguard
     privileged: true
     network_mode: host
     restart: "on-failure"
-    ports:
-      - "7980:7980"
     labels:
       io.balena.features.kernel-modules: 1
     volumes:
       - wireguard:/wireguard
 
   pihole1:
-    container_name: pihole
+    container_name: pihole1
     build: ./services/pihole
     privileged: true
     volumes:
@@ -60,7 +57,7 @@ services:
       io.balena.features.dbus: "1"
 
   pihole2:
-    container_name: pihole
+    container_name: pihole2
     build: ./services/pihole
     privileged: true
     volumes:
@@ -78,10 +75,6 @@ services:
     labels:
       io.balena.features.dbus: "1"
 
-  # wesher:
-  #   build: ./services/wesher
-  #   network_mode: host
-  #   privileged: true
 
   caddy:
     build: ./services/caddy
@@ -94,6 +87,12 @@ services:
       - certs:/wireguard/certs
       - extra_certs:/usr/local/share/ca-certificates/extra
       - caddydata:/data
+
+
+  # wesher:
+  #   build: ./services/wesher
+  #   network_mode: host
+  #   privileged: true
   # matrix-generate:
   #   image: matrixdotorg/synapse:v1.49.2
   #   restart: "on-failure"
@@ -162,60 +161,60 @@ services:
   #   depends_on:
   #     - webserver
 
-  peertube:
-    # If you don't want to use the official image and build one from sources:
-    # build:
-    #   context: .
-    #   dockerfile: ./support/docker/production/Dockerfile.bullseye
-    build: ./services/peertube
-    environment:
-      - PEERTUBE_DB_USERNAME=peertube
-      - PEERTUBE_DB_PASSWORD=peertube
-      - PEERTUBE_DB_SSL=false
-      - PEERTUBE_DB_HOSTNAME=postgres
-      - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
-      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
-      - PEERTUBE_ADMIN_EMAIL=test@example.com
-      - PT_INITIAL_ROOT_PASSWORD=testpassword
-    ports:
-      - "1935:1935" # If you don't want to use the live feature, you can comment this line
-      - "9000:9000" # If you provide your own webserver and reverse-proxy, otherwise not suitable for production
-    volumes:
-      - assets:/app/client/dist
-      - peertube_data:/data
-      - peertube_config:/config
-      - certs:/usr/local/share/ca-certificates
-      - extra_certs:/usr/local/share/ca-certificates/extra
-      - etc:/etc
-    depends_on:
-      - postgres
-      - redis
-      # - postfix
-    restart: "always"
-  postgres:
-    image: postgres:13-alpine
-    environment:
-      - POSTGRES_USER=peertube
-      - POSTGRES_PASSWORD=peertube
-      - POSTGRES_DB=peertube
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    restart: "always"
-  redis:
-    image: redis:6-alpine
-    volumes:
-      - redis:/data
-    restart: "always"
-  # # networks:
-  # #   default:
-  # #     ipam:
-  # #       driver: default
-  # #       config:
-  # #       - subnet: 172.18.0.0/16
-  #   # postfix:
-  #   #   image: mwader/postfix-relay
-  #   #   env_file:
-  #   #     - ./services/peertube/.env
-  #   #   volumes:
-  #   #     - ./docker-volume/opendkim/keys:/etc/opendkim/keys
-  #   #   restart: "always"
+  # peertube:
+  #   # If you don't want to use the official image and build one from sources:
+  #   # build:
+  #   #   context: .
+  #   #   dockerfile: ./support/docker/production/Dockerfile.bullseye
+  #   build: ./services/peertube
+  #   environment:
+  #     - PEERTUBE_DB_USERNAME=peertube
+  #     - PEERTUBE_DB_PASSWORD=peertube
+  #     - PEERTUBE_DB_SSL=false
+  #     - PEERTUBE_DB_HOSTNAME=postgres
+  #     - PEERTUBE_WEBSERVER_HOSTNAME=peertube.wg
+  #     - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16"]
+  #     - PEERTUBE_ADMIN_EMAIL=test@example.com
+  #     - PT_INITIAL_ROOT_PASSWORD=testpassword
+  #   ports:
+  #     - "1935:1935" # If you don't want to use the live feature, you can comment this line
+  #     - "9000:9000" # If you provide your own webserver and reverse-proxy, otherwise not suitable for production
+  #   volumes:
+  #     - assets:/app/client/dist
+  #     - peertube_data:/data
+  #     - peertube_config:/config
+  #     - certs:/usr/local/share/ca-certificates
+  #     - extra_certs:/usr/local/share/ca-certificates/extra
+  #     - etc:/etc
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #     # - postfix
+  #   restart: "always"
+  # postgres:
+  #   image: postgres:13-alpine
+  #   environment:
+  #     - POSTGRES_USER=peertube
+  #     - POSTGRES_PASSWORD=peertube
+  #     - POSTGRES_DB=peertube
+  #   volumes:
+  #     - postgres:/var/lib/postgresql/data
+  #   restart: "always"
+  # redis:
+  #   image: redis:6-alpine
+  #   volumes:
+  #     - redis:/data
+  #   restart: "always"
+  # # # networks:
+  # # #   default:
+  # # #     ipam:
+  # # #       driver: default
+  # # #       config:
+  # # #       - subnet: 172.18.0.0/16
+  # #   # postfix:
+  # #   #   image: mwader/postfix-relay
+  # #   #   env_file:
+  # #   #     - ./services/peertube/.env
+  # #   #   volumes:
+  # #   #     - ./docker-volume/opendkim/keys:/etc/opendkim/keys
+  # #   #   restart: "always"
