--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,6 @@ services:
     labels:
       io.balena.features.dbus: "1"
 
-
   caddy:
     build: ./services/caddy
     restart: always
@@ -88,7 +87,38 @@ services:
       - extra_certs:/usr/local/share/ca-certificates/extra
       - caddydata:/data
 
+  pleroma_db:
+    image: amd64/postgres:12.9-alpine
+    container_name: pleroma_db
+    restart: always
+    environment:
+      POSTGRES_USER: pleroma
+      POSTGRES_PASSWORD: ChangeMe!
+      POSTGRES_DB: pleroma
+    volumes:
+      - postgres:/var/lib/postgresql/data
 
+  pleroma:
+    build: ./services/docker-pleroma/
+    image: pleroma
+    container_name: pleroma_web
+    restart: always
+    ports:
+      - '4000:4000'
+    volumes:
+      - uploads:/var/lib/pleroma/uploads
+      - static:/var/lib/pleroma/static
+    environment:
+      DOMAIN: pleroma.wg
+      INSTANCE_NAME: Pleroma
+      ADMIN_EMAIL: admin@example.com
+      NOTIFY_EMAIL: notify@example.com
+      DB_USER: pleroma
+      DB_PASS: ChangeMe!
+      DB_NAME: pleroma
+      DB_HOST: pleroma_db
+    depends_on:
+      - pleroma_db
   # wesher:
   #   build: ./services/wesher
   #   network_mode: host
