disable pihole selfcheck

--- a/services/pihole/Dockerfile
+++ b/services/pihole/Dockerfile
@@ -11,3 +11,4 @@ ENV PIHOLE_DNS_ 1.1.1.1;1.0.0.1
 ENV WEBPASSWORD balena
 
 ENV DBUS_SYSTEM_BUS_ADDRESS 'unix:path=/host/run/dbus/system_bus_socket'
+HEALTHCHECK NONE
