--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - PIHOLE_INTERFACE=wgone
       - PIHOLE_ADDRESS=10.128.0.1
       - LIGHTTPD_PORT=10001
+    depends_on:
+      - wireguard
     labels:
       io.balena.features.dbus: "1"
 
@@ -72,6 +74,8 @@ services:
       - PIHOLE_INTERFACE=wgtwo
       - PIHOLE_ADDRESS=10.128.0.2
       - LIGHTTPD_PORT=10002
+    depends_on:
+      - wireguard
     labels:
       io.balena.features.dbus: "1"
 
@@ -86,43 +90,42 @@ services:
       - certs:/wireguard/certs
       - extra_certs:/usr/local/share/ca-certificates/extra
       - caddydata:/data
-
-  pleroma_db:
-    image: amd64/postgres:12.9-alpine
-    container_name: pleroma_db
-    restart: always
-    environment:
-      POSTGRES_USER: pleroma
-      POSTGRES_PASSWORD: ChangeMe!
-      POSTGRES_DB: pleroma
-    volumes:
-      - postgres:/var/lib/postgresql/data
-
-  pleroma:
-    build: ./services/docker-pleroma/
-    image: pleroma
-    container_name: pleroma_web
-    restart: always
-    ports:
-      - '4000:4000'
-    volumes:
-      - uploads:/var/lib/pleroma/uploads
-      - static:/var/lib/pleroma/static
-    environment:
-      DOMAIN: pleroma.wg
-      INSTANCE_NAME: Pleroma
-      ADMIN_EMAIL: admin@example.com
-      NOTIFY_EMAIL: notify@example.com
-      DB_USER: pleroma
-      DB_PASS: ChangeMe!
-      DB_NAME: pleroma
-      DB_HOST: pleroma_db
-    depends_on:
-      - pleroma_db
   # wesher:
   #   build: ./services/wesher
   #   network_mode: host
   #   privileged: true
+  # pleroma_db:
+  #   image: amd64/postgres:12.9-alpine
+  #   container_name: pleroma_db
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: pleroma
+  #     POSTGRES_PASSWORD: ChangeMe!
+  #     POSTGRES_DB: pleroma
+  #   volumes:
+  #     - postgres:/var/lib/postgresql/data
+
+  # pleroma:
+  #   build: ./services/docker-pleroma/
+  #   image: pleroma
+  #   container_name: pleroma_web
+  #   restart: always
+  #   ports:
+  #     - '4000:4000'
+  #   volumes:
+  #     - uploads:/var/lib/pleroma/uploads
+  #     - static:/var/lib/pleroma/static
+  #   environment:
+  #     DOMAIN: pleroma.wg
+  #     INSTANCE_NAME: Pleroma
+  #     ADMIN_EMAIL: admin@example.com
+  #     NOTIFY_EMAIL: notify@example.com
+  #     DB_USER: pleroma
+  #     DB_PASS: ChangeMe!
+  #     DB_NAME: pleroma
+  #     DB_HOST: pleroma_db
+  #   depends_on:
+  #     - pleroma_db
   # matrix-generate:
   #   image: matrixdotorg/synapse:v1.49.2
   #   restart: "on-failure"
