wehser over ipv6 with join command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
       - certs:/wireguard/certs
       - extra_certs:/usr/local/share/ca-certificates/extra
       - caddydata:/data
+      - wesher:/wesher
   wesher:
     build: ./services/wesher
     network_mode: host
