--- a/services/wesher/Dockerfile.template
+++ b/services/wesher/Dockerfile.template
@@ -2,7 +2,7 @@ FROM balenalib/%%BALENA_ARCH%%-debian
 
 WORKDIR /
 RUN install_packages wget miniupnpc dnsutils inotify-tools net-tools
-COPY fetch-helper.sh run.sh hosts_updated.sh watch_hosts.sh join.sh ./
+COPY fetch-helper.sh run.sh hosts_updated.sh watch_hosts.sh ./
 RUN chmod u+x fetch-helper.sh run.sh hosts_updated.sh watch_hosts.sh
 RUN wget -O wesher $(./fetch-helper.sh %%BALENA_ARCH%%)
 RUN chmod u+x wesher
